Closed
Bug 195120
Opened 23 years ago
Closed 23 years ago
FAYT fails after switching to compose window, typing a key, and returning
Categories
(SeaMonkey :: Find In Page, defect)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: aaronlev)
Details
(Keywords: regression)
Attachments
(1 file)
|
638 bytes,
patch
|
caillon
:
review+
sfraser_bugs
:
superreview+
asa
:
approval1.3-
|
Details | Diff | Splinter Review |
found using 2003.02.26 comm trunk builds. FAYT fails after copy something from
browser and pasting in composer.
0. use the [default] FAYT setting to search links only.
1. open a page (or tab) with links, such as http://mozilla.org
2. make sure that FAYT works --try typing "net" and verify it's selected/gets focus.
3. copy something from the page --either highlight (drag select) some text and
hit accel+C, or select "copy link location" from a link's context menu.
4. open a new composer window (accel+4 or accel+shift+N).
5. paste what you copied --i used accel+V.
6. switch back to the browser window --i just mouseclicked back there.
7. try FAYT again --i just started typing the first chars of a link, eg, "moz".
results: nothing is found (highlighted), FAYT no longer works.
workaround: if i reload the page, FAYT starts working again.
| Reporter | ||
Comment 1•23 years ago
|
||
this regressed sometime btwn the 2/13 (works fine) and 2/17 (broken) builds.
narrowing some more...
Keywords: regression
| Reporter | ||
Comment 2•23 years ago
|
||
using linux comm bits, this regressed btwn the 2003.02.13.22 (works) and
2003.02.14.05 (broken) builds.
| Assignee | ||
Comment 3•23 years ago
|
||
| Assignee | ||
Comment 4•23 years ago
|
||
Changing summary, to more accurately reflect problem.
Summary: FAYT fails after copy something from browser and pasting in composer → FAYT fails after switching to compose window, typing a key, and returning
| Assignee | ||
Updated•23 years ago
|
Attachment #116166 -
Flags: review?(caillon)
| Assignee | ||
Comment 5•23 years ago
|
||
As I said, the new summary is more accurate.
You don't have to paste, all you have to do is switch to the compose window and
type a key. Then find as you type won't start again.
Flags: blocking1.3?
Updated•23 years ago
|
Attachment #116166 -
Flags: review?(caillon) → review+
| Assignee | ||
Updated•23 years ago
|
Attachment #116166 -
Flags: superreview?(sfraser)
Updated•23 years ago
|
Attachment #116166 -
Flags: superreview?(sfraser) → superreview+
| Assignee | ||
Comment 6•23 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 7•23 years ago
|
||
Comment on attachment 116166 [details] [diff] [review]
Make sure that when window changes, we cancel the current find, so that it knows we've changed windows
a=asa for checkin to the 1.3 branch. not going to hold for this but if it makes
it into the branch before we get final bits, that'd be nice.
Attachment #116166 -
Flags: approval1.3+
Updated•23 years ago
|
Flags: blocking1.3? → blocking1.3-
Comment 8•23 years ago
|
||
Comment on attachment 116166 [details] [diff] [review]
Make sure that when window changes, we cancel the current find, so that it knows we've changed windows
aaron says not for 1.3. removing 1.3+
Attachment #116166 -
Flags: approval1.3+ → approval1.3-
| Reporter | ||
Comment 9•23 years ago
|
||
vrfy'd fixed with 2003.03.13 comm bits, all platforms.
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•