Bug 195120. FAYT fails after switching to compose window, typing a key, and returning. r=caillon, sr=sfraser